Adicionado menu e nuvem superior para parte mobile e modificado codigo das imagens das nuvens da pagina inicial

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,5 +46,11 @@ body {
   #copyright{
     font-size: 13px;
   }
+  #nuvem_mobile{
+    display:block;
+  }
+  #menu_mobile{
+    display:block;
+  }
 
 }
